--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </div>
 <div class="section">
 <div class="section-icon">📧</div>
-ا <a href="a1_emails.html">📧 إيميلات</a>
+ <a href="a1_emails.html">📧 إيميلات</a>
 </div>
 <div class="section">
 <div class="section-icon">📚</div>
@@ -104,6 +104,7 @@
 </main>
 </body>
 </html>
+
 
 
 
