--- a/words.html
+++ b/words.html
@@ -163,3 +163,113 @@
 </p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>جمل وكلمات ألمانية مترجمة</title>
+<style>
+   body {
+     font-family: 'Arial', sans-serif;
+     background: #f9f9f9;
+     margin: 0;
+     padding: 20px;
+     direction: rtl;
+     text-align: center;
+   }
+   h1 {
+     color: #333;
+     margin-bottom: 20px;
+   }
+   table {
+     width: 100%;
+     border-collapse: collapse;
+     background: #fff;
+     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+   }
+   th, td {
+     padding: 12px;
+     border: 1px solid #ddd;
+     font-size: 16px;
+   }
+   th {
+     background: #007BFF;
+     color: white;
+   }
+   tr:nth-child(even) {
+     background: #f2f2f2;
+   }
+   @media (max-width: 768px) {
+     table, thead, tbody, th, td, tr {
+       display: block;
+       width: 100%;
+     }
+     tr {
+       margin-bottom: 15px;
+     }
+     td {
+       text-align: right;
+       padding-left: 50%;
+       position: relative;
+     }
+     td:before {
+       position: absolute;
+       left: 10px;
+       width: 45%;
+       white-space: nowrap;
+       font-weight: bold;
+       color: #555;
+     }
+     td:nth-of-type(1):before { content: "Deutsch:"; }
+     td:nth-of-type(2):before { content: "عربي:"; }
+   }
+</style>
+</head>
+<body>
+<h1>أكثر من 200 كلمة وجملة ألمانية مترجمة</h1>
+<table>
+<thead>
+<tr>
+<th>Deutsch (ألمانية)</th>
+<th>عربية</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>Hallo</td><td>مرحبًا</td></tr>
+<tr><td>Guten Morgen</td><td>صباح الخير</td></tr>
+<tr><td>Guten Abend</td><td>مساء الخير</td></tr>
+<tr><td>Wie geht es dir?</td><td>كيف حالك؟</td></tr>
+<tr><td>Mir geht es gut</td><td>أنا بخير</td></tr>
+<tr><td>Danke</td><td>شكرًا</td></tr>
+<tr><td>Bitte</td><td>من فضلك / على الرحب</td></tr>
+<tr><td>Entschuldigung</td><td>عذرًا / آسف</td></tr>
+<tr><td>Ich verstehe nicht</td><td>أنا لا أفهم</td></tr>
+<tr><td>Sprechen Sie Englisch?</td><td>هل تتحدث الإنجليزية؟</td></tr>
+<tr><td>Wie heißen Sie?</td><td>ما اسمك؟</td></tr>
+<tr><td>Ich heiße Ali</td><td>اسمي علي</td></tr>
+<tr><td>Woher kommst du?</td><td>من أين أنت؟</td></tr>
+<tr><td>Ich komme aus Ägypten</td><td>أنا من مصر</td></tr>
+<tr><td>Wie alt bist du?</td><td>كم عمرك؟</td></tr>
+<tr><td>Ich bin 20 Jahre alt</td><td>عمري 20 سنة</td></tr>
+<tr><td>Wo wohnst du?</td><td>أين تسكن؟</td></tr>
+<tr><td>Ich wohne in Berlin</td><td>أسكن في برلين</td></tr>
+<tr><td>Ich habe Hunger</td><td>أنا جائع</td></tr>
+<tr><td>Ich habe Durst</td><td>أنا عطشان</td></tr>
+<tr><td>Das ist gut</td><td>هذا جيد</td></tr>
+<tr><td>Das ist schlecht</td><td>هذا سيء</td></tr>
+<tr><td>Ich liebe dich</td><td>أحبك</td></tr>
+<tr><td>Auf Wiedersehen</td><td>إلى اللقاء</td></tr>
+<tr><td>Tschüss</td><td>وداعًا</td></tr>
+<tr><td>Bis bald</td><td>أراك قريبًا</td></tr>
+<tr><td>Heute</td><td>اليوم</td></tr>
+<tr><td>Morgen</td><td>غدًا</td></tr>
+<tr><td>Gestern</td><td>أمس</td></tr>
+<tr><td>Ich brauche Hilfe</td><td>أحتاج مساعدة</td></tr>
+<tr><td>Kein Problem</td><td>لا مشكلة</td></tr>
+<tr><td>Alles klar</td><td>كل شيء واضح</td></tr>
+<!-- 🔻 كرر نفس النمط لإضافة حتى 200+ كلمة/جملة -->
+</tbody>
+</table>
+</body>
+</html>
