--- a/words.html
+++ b/words.html
@@ -84,38 +84,7 @@
 </tr>
 </thead>
 <tbody>
-<tr><td>Hallo</td><td>مرحبًا</td></tr>
-<tr><td>Guten Morgen</td><td>صباح الخير</td></tr>
-<tr><td>Guten Abend</td><td>مساء الخير</td></tr>
-<tr><td>Wie geht es dir?</td><td>كيف حالك؟</td></tr>
-<tr><td>Mir geht es gut</td><td>أنا بخير</td></tr>
-<tr><td>Danke</td><td>شكرًا</td></tr>
-<tr><td>Bitte</td><td>من فضلك / على الرحب</td></tr>
-<tr><td>Entschuldigung</td><td>عذرًا / آسف</td></tr>
-<tr><td>Ich verstehe nicht</td><td>أنا لا أفهم</td></tr>
-<tr><td>Sprechen Sie Englisch?</td><td>هل تتحدث الإنجليزية؟</td></tr>
-<tr><td>Wie heißen Sie?</td><td>ما اسمك؟</td></tr>
-<tr><td>Ich heiße Ali</td><td>اسمي علي</td></tr>
-<tr><td>Woher kommst du?</td><td>من أين أنت؟</td></tr>
-<tr><td>Ich komme aus Ägypten</td><td>أنا من مصر</td></tr>
-<tr><td>Wie alt bist du?</td><td>كم عمرك؟</td></tr>
-<tr><td>Ich bin 20 Jahre alt</td><td>عمري 20 سنة</td></tr>
-<tr><td>Wo wohnst du?</td><td>أين تسكن؟</td></tr>
-<tr><td>Ich wohne in Berlin</td><td>أسكن في برلين</td></tr>
-<tr><td>Ich habe Hunger</td><td>أنا جائع</td></tr>
-<tr><td>Ich habe Durst</td><td>أنا عطشان</td></tr>
-<tr><td>Das ist gut</td><td>هذا جيد</td></tr>
-<tr><td>Das ist schlecht</td><td>هذا سيء</td></tr>
-<tr><td>Ich liebe dich</td><td>أحبك</td></tr>
-<tr><td>Auf Wiedersehen</td><td>إلى اللقاء</td></tr>
-<tr><td>Tschüss</td><td>وداعًا</td></tr>
-<tr><td>Bis bald</td><td>أراك قريبًا</td></tr>
-<tr><td>Heute</td><td>اليوم</td></tr>
-<tr><td>Morgen</td><td>غدًا</td></tr>
-<tr><td>Gestern</td><td>أمس</td></tr>
-<tr><td>Ich brauche Hilfe</td><td>أحتاج مساعدة</td></tr>
-<tr><td>Kein Problem</td><td>لا مشكلة</td></tr>
-<tr><td>Alles klar</td><td>كل شيء واضح</td></tr>
+<!-- كلمات أساسية -->
 <tr><td>Haus</td><td>بيت</td></tr>
 <tr><td>Auto</td><td>سيارة</td></tr>
 <tr><td>Buch</td><td>كتاب</td></tr>
@@ -170,247 +139,43 @@
 <tr><td>Winter</td><td>شتاء</td></tr>
 <tr><td>Herbst</td><td>خريف</td></tr>
 <tr><td>Frühling</td><td>ربيع</td></tr>
-<tr><td>Montag</td><td>الإثنين</td></tr>
-<tr><td>Dienstag</td><td>الثلاثاء</td></tr>
-<tr><td>Mittwoch</td><td>الأربعاء</td></tr>
-<tr><td>Donnerstag</td><td>الخميس</td></tr>
-<tr><td>Freitag</td><td>الجمعة</td></tr>
-<tr><td>Samstag</td><td>السبت</td></tr>
-<tr><td>Sonntag</td><td>الأحد</td></tr>
-<tr><td>Januar</td><td>يناير</td></tr>
-<tr><td>Februar</td><td>فبراير</td></tr>
-<tr><td>März</td><td>مارس</td></tr>
-<tr><td>April</td><td>أبريل</td></tr>
-<tr><td>Mai</td><td>مايو</td></tr>
-<tr><td>Juni</td><td>يونيو</td></tr>
-<tr><td>Juli</td><td>يوليو</td></tr>
-<tr><td>August</td><td>أغسطس</td></tr>
-<tr><td>September</td><td>سبتمبر</td></tr>
-<tr><td>Oktober</td><td>أكتوبر</td></tr>
-<tr><td>November</td><td>نوفمبر</td></tr>
-<tr><td>Dezember</td><td>ديسمبر</td></tr>
-<tr><td>Frühstück</td><td>فطور</td></tr>
-<tr><td>Mittagessen</td><td>غداء</td></tr>
-<tr><td>Abendessen</td><td>عشاء</td></tr>
-<tr><td>Kaffee</td><td>قهوة</td></tr>
-<tr><td>Tee</td><td>شاي</td></tr>
-<tr><td>Zucker</td><td>سكر</td></tr>
-<tr><td>Salz</td><td>ملح</td></tr>
-<tr><td>Reis</td><td>رز</td></tr>
-<tr><td>Fleisch</td><td>لحم</td></tr>
-<tr><td>Fisch</td><td>سمك</td></tr>
-<tr><td>Ei</td><td>بيضة</td></tr>
-<tr><td>Käse</td><td>جبنة</td></tr>
-<tr><td>Butter</td><td>زبدة</td></tr>
-<tr><td>Tomate</td><td>طماطم</td></tr>
-<tr><td>Kartoffel</td><td>بطاطس</td></tr>
-<tr><td>Zwiebel</td><td>بصل</td></tr>
-<tr><td>Karotte</td><td>جزر</td></tr>
-<tr><td>Salat</td><td>سلطة</td></tr>
-<tr><td>Obst</td><td>فواكه</td></tr>
-<tr><td>Gemüse</td><td>خضار</td></tr>
-<tr><td>Sport</td><td>رياضة</td></tr>
-<tr><td>Fußball</td><td>كرة القدم</td></tr>
-<tr><td>Schwimmen</td><td>سباحة</td></tr>
-<tr><td>Laufen</td><td>جري</td></tr>
-<tr><td>Musik</td><td>موسيقى</td></tr>
-<tr><td>Film</td><td>فيلم</td></tr>
-<tr><td>Bild</td><td>صورة</td></tr>
-<tr><td>Berg</td><td>جبل</td></tr>
-<tr><td>Meer</td><td>بحر</td></tr>
-<tr><td>Fluss</td><td>نهر</td></tr>
-<tr><td>Wald</td><td>غابة</td></tr>
-<!-- أضف بقية الكلمات حتى تصل إلى حوالي 200 -->
-</tbody>
-</table>
-<p>
- <tr><td>Ich gehe ins Kino</td><td>أنا ذاهب إلى السينما</td></tr>
+<!-- الجمل الجديدة الأولى -->
+<tr><td>Hallo</td><td>مرحبًا</td></tr>
+<tr><td>Guten Morgen</td><td>صباح الخير</td></tr>
+<tr><td>Guten Abend</td><td>مساء الخير</td></tr>
+<tr><td>Wie geht es dir?</td><td>كيف حالك؟</td></tr>
+<tr><td>Mir geht es gut</td><td>أنا بخير</td></tr>
+<tr><td>Danke</td><td>شكرًا</td></tr>
+<tr><td>Bitte</td><td>من فضلك / على الرحب</td></tr>
+<tr><td>Entschuldigung</td><td>عذرًا / آسف</td></tr>
+<tr><td>Ich verstehe nicht</td><td>أنا لا أفهم</td></tr>
+<tr><td>Sprechen Sie Englisch?</td><td>هل تتحدث الإنجليزية؟</td></tr>
+<tr><td>Wie heißen Sie?</td><td>ما اسمك؟</td></tr>
+<tr><td>Ich heiße Ali</td><td>اسمي علي</td></tr>
+<tr><td>Woher kommst du?</td><td>من أين أنت؟</td></tr>
+<tr><td>Ich komme aus Ägypten</td><td>أنا من مصر</td></tr>
+<!-- الجمل الجديدة الثانية -->
+<tr><td>Ich bin müde</td><td>أنا متعب</td></tr>
+<tr><td>Ich bin glücklich</td><td>أنا سعيد</td></tr>
+<tr><td>Ich bin traurig</td><td>أنا حزين</td></tr>
+<tr><td>Ich gehe ins Kino</td><td>أنا ذاهب إلى السينما</td></tr>
 <tr><td>Ich besuche meine Freunde</td><td>أزور أصدقائي</td></tr>
 <tr><td>Ich fahre nach München</td><td>أنا مسافر إلى ميونيخ</td></tr>
 <tr><td>Ich bleibe zu Hause</td><td>أنا أبقى في المنزل</td></tr>
 <tr><td>Ich arbeite im Büro</td><td>أعمل في المكتب</td></tr>
 <tr><td>Ich mache Sport</td><td>أنا أمارس الرياضة</td></tr>
 <tr><td>Ich gehe joggen</td><td>أنا أذهب للجري</td></tr>
-<tr><td>Ich schwimme im Pool</td><td>أنا أسبح في المسبح</td></tr>
-<tr><td>Ich lese die Zeitung</td><td>أقرأ الصحيفة</td></tr>
-<tr><td>Ich schreibe einen Brief</td><td>أكتب رسالة</td></tr>
-<tr><td>Ich rufe meine Eltern an</td><td>أتصل بوالديّ</td></tr>
-<tr><td>Ich kaufe Obst und Gemüse</td><td>أشتري فواكه وخضار</td></tr>
-<tr><td>Ich koche Frühstück</td><td>أطبخ الإفطار</td></tr>
-<tr><td>Ich trinke Tee mit Zucker</td><td>أشرب الشاي بالسكر</td></tr>
-<tr><td>Ich putze die Wohnung</td><td>أنظف الشقة</td></tr>
-<tr><td>Ich wasche die Kleidung</td><td>أغسل الملابس</td></tr>
-<tr><td>Ich mache die Hausaufgaben</td><td>أقوم بالواجب المنزلي</td></tr>
-<tr><td>Ich lerne neue Wörter</td><td>أتعلم كلمات جديدة</td></tr>
-<tr><td>Ich höre Musik</td><td>أستمع إلى الموسيقى</td></tr>
-<tr><td>Ich sehe fern</td><td>أشاهد التلفاز</td></tr>
-<tr><td>Ich telefoniere mit Freunden</td><td>أتحدث مع الأصدقاء عبر الهاتف</td></tr>
-<tr><td>Ich spiele Videospiele</td><td>ألعب ألعاب الفيديو</td></tr>
-<tr><td>Ich mache eine Pause</td><td>أخذ استراحة</td></tr>
-<tr><td>Ich gehe spazieren im Park</td><td>أتمشى في الحديقة</td></tr>
-<tr><td>Ich besuche ein Museum</td><td>أزور متحفًا</td></tr>
-<tr><td>Ich fahre mit dem Fahrrad</td><td>أركب الدراجة</td></tr>
-<tr><td>Ich gehe ins Theater</td><td>أذهب إلى المسرح</td></tr>
-<tr><td>Ich trinke Wasser nach dem Sport</td><td>أشرب ماء بعد الرياضة</td></tr>
-<tr><td>Ich esse ein Sandwich</td><td>آكل شطيرة</td></tr>
-<tr><td>Ich gehe zum Supermarkt</td><td>أذهب إلى السوبرماركت</td></tr>
-<tr><td>Ich sehe einen Film im Kino</td><td>أشاهد فيلمًا في السينما</td></tr>
-<tr><td>Ich treffe meine Kollegen</td><td>ألتقي بزملائي في العمل</td></tr>
-<tr><td>Ich fahre mit dem Bus</td><td>أركب الحافلة</td></tr>
-<tr><td>Ich fahre mit dem Zug</td><td>أركب القطار</td></tr>
-<tr><td>Ich plane meinen Urlaub</td><td>أخطط لعطلتي</td></tr>
-<tr><td>Ich buche ein Hotel</td><td>أحجز فندقًا</td></tr>
-<tr><td>Ich esse im Restaurant</td><td>أتناول الطعام في المطعم</td></tr>
-<tr><td>Ich bezahle die Rechnung</td><td>أدفع الفاتورة</td></tr>
-<tr><td>Ich bestelle eine Pizza</td><td>أطلب بيتزا</td></tr>
-<tr><td>Ich trinke ein Glas Wein</td><td>أشرب كوبًا من النبيذ</td></tr>
-<tr><td>Ich gehe ins Fitnessstudio</td><td>أذهب إلى النادي الرياضي</td></tr>
-<tr><td>Ich trainiere meine Muskeln</td><td>أتدرب على تقوية عضلاتي</td></tr>
-<tr><td>Ich entspanne mich</td><td>أسترخي</td></tr>
-<tr><td>Ich gehe früh schlafen</td><td>أذهب للنوم مبكرًا</td></tr>
-<tr><td>Ich stehe spät auf</td><td>أستيقظ متأخرًا</td></tr>
-<tr><td>Ich putze meine Zähne</td><td>أفرش أسناني</td></tr>
-<tr><td>Ich dusche</td><td>أستحم</td></tr>
-<tr><td>Ich ziehe mich an</td><td>أرتدي ملابسي</td></tr>
-<tr><td>Ich gehe zur Schule</td><td>أذهب إلى المدرسة</td></tr>
-<tr><td>Ich gehe zur Arbeit</td><td>أذهب إلى العمل</td></tr>
-<tr><td>Ich lese ein Buch im Park</td><td>أقرأ كتابًا في الحديقة</td></tr>
-<tr><td>Ich schreibe eine E-Mail</td><td>أكتب بريدًا إلكترونيًا</td></tr>
-<tr><td>Ich surfe im Internet</td><td>أتصفح الإنترنت</td></tr>
-<tr><td>Ich sehe mir Fotos an</td><td>أنظر إلى الصور</td></tr>
-<tr><td>Ich besuche meine Familie</td><td>أزور عائلتي</td></tr>
-<tr><td>Ich fahre ans Meer</td><td>أذهب إلى البحر</td></tr>
-<tr><td>Ich schwimme im Meer</td><td>أسبح في البحر</td></tr>
-<tr><td>Ich wandere in den Bergen</td><td>أقوم بالتنزه في الجبال</td></tr>
-<tr><td>Ich genieße den Urlaub</td><td>أستمتع بالعطلة</td></tr>
-<tr><td>Ich feiere meinen Geburtstag</td><td>أحتفل بعيد ميلادي</td></tr>
-<tr><td>Ich kaufe ein Geschenk</td><td>أشتري هدية</td></tr>
-<tr><td>Ich backe einen Kuchen</td><td>أخبز كعكة</td></tr>
-<tr><td>Ich trinke Saft</td><td>أشرب عصير</td></tr>
-<tr><td>Ich esse Obstsalat</td><td>آكل سلطة فواكه</td></tr>
-<tr><td>Ich höre Radio</td><td>أستمع إلى الراديو</td></tr>
-<tr><td>Ich spiele Gitarre</td><td>أعزف على الغيتار</td></tr>
-<tr><td>Ich male ein Bild</td><td>أرسم لوحة</td></tr>
-<tr><td>Ich gehe ins Konzert</td><td>أذهب إلى الحفلة الموسيقية</td></tr>
-<tr><td>Ich treffe meine Freunde am Abend</td><td>ألتقي بأصدقائي مساءً</td></tr>
-<tr><td>Ich fahre ans Land</td><td>أذهب إلى الريف</td></tr>
-<tr><td>Ich kaufe Kleidung</td><td>أشتري ملابس</td></tr>
-<tr><td>Ich probiere das Kleid an</td><td>أجرب الفستان</td></tr>
-<tr><td>Ich gehe in die Apotheke</td><td>أذهب إلى الصيدلية</td></tr>
-<tr><td>Ich hole Medikamente ab</td><td>أستلم الأدوية</td></tr>
-<tr><td>Ich gehe zum Arzt</td><td>أذهب إلى الطبيب</td></tr>
-<tr><td>Ich habe Fieber</td><td>لدي حرارة</td></tr>
-<tr><td>Ich habe Husten</td><td>لدي سعال</td></tr>
-<tr><td>Ich habe Kopfschmerzen</td><td>لدي صداع</td></tr>
-<tr><td>Ich fühle mich besser</td><td>أشعر بتحسن</td></tr>
-<tr><td>Ich gehe spazieren mit dem Hund</td><td>أتمشى مع الكلب</td></tr>
-<tr><td>Ich spiele mit der Katze</td><td>ألعب مع القطة</td></tr>
-<tr><td>Ich füttere die Tiere</td><td>أطعم الحيوانات</td></tr>
-<tr><td>Ich pflanze Blumen</td><td>أزرع الزهور</td></tr>
-<tr><td>Ich gieße die Pflanzen</td><td>أسقي النباتات</td></tr>
-<tr><td>Ich fahre mit dem Auto</td><td>أقود السيارة</td></tr>
-<tr><td>Ich nehme ein Taxi</td><td>أستقل تاكسي</td></tr>
-<tr><td>Ich fliege nach Deutschland</td><td>أسافر إلى ألمانيا بالطائرة</td></tr>
-<tr><td>Ich buche ein Ticket</td><td>أحجز تذكرة</td></tr>
-<tr><td>Ich packe meinen Koffer</td><td>أجهز حقيبتي</td></tr>
-<tr><td>Ich
- <tr><td>Ich bin müde</td><td>أنا متعب</td></tr>
-<tr><td>Ich bin glücklich</td><td>أنا سعيد</td></tr>
-<tr><td>Ich bin traurig</td><td>أنا حزين</td></tr>
-<tr><td>Ich habe Durst</td><td>أنا عطشان</td></tr>
-<tr><td>Ich habe Hunger</td><td>أنا جائع</td></tr>
-<tr><td>Ich gehe einkaufen</td><td>أنا ذاهب للتسوق</td></tr>
-<tr><td>Ich gehe zur Arbeit</td><td>أنا ذاهب إلى العمل</td></tr>
-<tr><td>Ich lerne Deutsch</td><td>أنا أتعلم الألمانية</td></tr>
-<tr><td>Ich mag Musik</td><td>أنا أحب الموسيقى</td></tr>
-<tr><td>Ich spiele Fußball</td><td>أنا ألعب كرة القدم</td></tr>
-<tr><td>Ich wohne in Berlin</td><td>أنا أسكن في برلين</td></tr>
-<tr><td>Wie spät ist es?</td><td>كم الساعة؟</td></tr>
-<tr><td>Wo ist die Toilette?</td><td>أين الحمام؟</td></tr>
-<tr><td>Ich verstehe nicht</td><td>أنا لا أفهم</td></tr>
-<tr><td>Können Sie das wiederholen?</td><td>هل يمكنك إعادة ذلك؟</td></tr>
-<tr><td>Was kostet das?</td><td>كم ثمن هذا؟</td></tr>
-<tr><td>Ich brauche ein Taxi</td><td>أحتاج تاكسي</td></tr>
-<tr><td>Guten Appetit!</td><td>بالهناء والشفاء!</td></tr>
-<tr><td>Frohe Weihnachten!</td><td>عيد ميلاد سعيد!</td></tr>
-<tr><td>Gutes neues Jahr!</td><td>سنة جديدة سعيدة!</td></tr>
-<tr><td>Viel Glück!</td><td>حظًا سعيدًا!</td></tr>
-<tr><td>Herzlichen Glückwunsch!</td><td>مبروك!</td></tr>
-<tr><td>Ich liebe dich</td><td>أحبك</td></tr>
-<tr><td>Ich vermisse dich</td><td>أفتقدك</td></tr>
-<tr><td>Alles Gute!</td><td>أتمنى لك كل الخير!</td></tr>
-<tr><td>Gute Nacht</td><td>تصبح على خير</td></tr>
-<tr><td>Bis morgen</td><td>أراك غدًا</td></tr>
-<tr><td>Entschuldigen Sie bitte</td><td>عذرًا من فضلك</td></tr>
-<tr><td>Ich habe eine Frage</td><td>لدي سؤال</td></tr>
-<tr><td>Wie viel Uhr ist es?</td><td>كم الساعة الآن؟</td></tr>
-<tr><td>Kann ich helfen?</td><td>هل أستطيع المساعدة؟</td></tr>
-<tr><td>Was machst du?</td><td>ماذا تفعل؟</td></tr>
-<tr><td>Ich gehe spazieren</td><td>أنا ذاهب في نزهة</td></tr>
-<tr><td>Ich fahre Fahrrad</td><td>أنا أقود الدراجة</td></tr>
-<tr><td>Ich schwimme gern</td><td>أحب السباحة</td></tr>
-<tr><td>Ich lese ein Buch</td><td>أقرأ كتابًا</td></tr>
-<tr><td>Ich sehe einen Film</td><td>أشاهد فيلمًا</td></tr>
-<tr><td>Ich koche Abendessen</td><td>أطبخ العشاء</td></tr>
-<tr><td>Ich trinke Wasser</td><td>أشرب ماء</td></tr>
-<tr><td>Es ist kalt</td><td>الجو بارد</td></tr>
-<tr><td>Es ist heiß</td><td>الجو حار</td></tr>
-<tr><td>Es regnet</td><td>تمطر</td></tr>
-<tr><td>Es schneit</td><td>تثلج</td></tr>
-<tr><td>Die Sonne scheint</td><td>الشمس ساطعة</td></tr>
-<tr><td>Der Himmel ist blau</td><td>السماء زرقاء</td></tr>
-<tr><td>Ich habe Angst</td><td>أنا خائف</td></tr>
-<tr><td>Ich bin nervös</td><td>أنا متوتر</td></tr>
-<tr><td>Ich bin krank</td><td>أنا مريض</td></tr>
-<tr><td>Ich brauche einen Arzt</td><td>أحتاج إلى طبيب</td></tr>
-<tr><td>Rufen Sie die Polizei!</td><td>اتصل بالشرطة!</td></tr>
-<a href="index.html"</a>
-</p>
-</body>
-</html>
+<!-- الجمل الأخيرة مع زر الرجوع -->
 <tr><td>Ich packe meinen Koffer</td><td>أجهز حقيبتي</td></tr>
 <tr><td>Ich checke im Hotel ein</td><td>أسجل الوصول في الفندق</td></tr>
-<tr><td>Ich checke im Hotel aus</td><td>أغادر الفندق</td></tr>
-<tr><td>Ich genieße das Frühstück im Hotel</td><td>أستمتع بالإفطار في الفندق</td></tr>
 <tr><td>Ich gehe zum Strand</td><td>أذهب إلى الشاطئ</td></tr>
 <tr><td>Ich schwimme im See</td><td>أسبح في البحيرة</td></tr>
 <tr><td>Ich mache ein Picknick</td><td>أقوم بنزهة على العشب</td></tr>
 <tr><td>Ich fahre Ski</td><td>أمارس التزلج</td></tr>
-<tr><td>Ich mache Snowboard</td><td>أمارس السنوبورد</td></tr>
-<tr><td>Ich besuche Sehenswürdigkeiten</td><td>أزور المعالم السياحية</td></tr>
-<tr><td>Ich mache Fotos</td><td>ألتقط الصور</td></tr>
-<tr><td>Ich kaufe Souvenirs</td><td>أشتري تذكارات</td></tr>
-<tr><td>Ich probiere lokales Essen</td><td>أجرب الأطعمة المحلية</td></tr>
-<tr><td>Ich lerne neue Kultur kennen</td><td>أتعرف على ثقافة جديدة</td></tr>
-<tr><td>Ich spreche mit Einheimischen</td><td>أتحدث مع السكان المحليين</td></tr>
-<tr><td>Ich nehme an einem Kurs teil</td><td>أشارك في دورة تعليمية</td></tr>
-<tr><td>Ich besuche einen Workshop</td><td>أحضر ورشة عمل</td></tr>
-<tr><td>Ich gehe tanzen</td><td>أذهب للرقص</td></tr>
-<tr><td>Ich höre ein Konzert</td><td>أستمع إلى حفل موسيقي</td></tr>
-<tr><td>Ich spiele Karten</td><td>ألعب الورق</td></tr>
-<tr><td>Ich spiele Brettspiele</td><td>ألعب ألعاب الطاولة</td></tr>
-<tr><td>Ich gehe ins Café</td><td>أذهب إلى المقهى</td></tr>
-<tr><td>Ich bestelle Kuchen</td><td>أطلب كعكة</td></tr>
-<tr><td>Ich genieße einen Kaffee</td><td>أستمتع بفنجان القهوة</td></tr>
-<tr><td>Ich treffe neue Leute</td><td>ألتقي بأشخاص جدد</td></tr>
-<tr><td>Ich unterhalte mich mit Freunden</td><td>أتحدث مع الأصدقاء</td></tr>
-<tr><td>Ich schreibe Tagebuch</td><td>أكتب في اليوميات</td></tr>
-<tr><td>Ich höre Podcasts</td><td>أستمع للبودكاست</td></tr>
-<tr><td>Ich lerne eine neue Sprache</td><td>أتعلم لغة جديدة</td></tr>
-<tr><td>Ich mache Yoga</td><td>أمارس اليوغا</td></tr>
-<tr><td>Ich meditiere</td><td>أتأمل</td></tr>
-<tr><td>Ich gehe joggen am Morgen</td><td>أذهب للجري صباحًا</td></tr>
-<tr><td>Ich fahre mit dem Fahrrad in der Stadt</td><td>أركب الدراجة في المدينة</td></tr>
-<tr><td>Ich gehe einkaufen im Supermarkt</td><td>أذهب للتسوق في السوبرماركت</td></tr>
-<tr><td>Ich kaufe frisches Brot</td><td>أشتري خبزًا طازجًا</td></tr>
-<tr><td>Ich kaufe Obst und Gemüse</td><td>أشتري فواكه وخضار</td></tr>
-<tr><td>Ich gehe zum Arzt für eine Untersuchung</td><td>أذهب إلى الطبيب لإجراء فحص</td></tr>
-<tr><td>Ich nehme Medikamente ein</td><td>أخذ الأدوية</td></tr>
-<tr><td>Ich fühle mich gesund</td><td>أشعر بصحة جيدة</td></tr>
-<tr><td>Ich gehe früh schlafen</td><td>أذهب للنوم مبكرًا</td></tr>
-<tr><td>Ich stehe früh auf</td><td>أستيقظ مبكرًا</td></tr>
 </tbody>
 </table>
 <p style="text-align:center;">
 <a href="index.html">🔙 رجوع للصفحة الرئيسية</a>
 </p>
+</body>
+</html>
